--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "lightgallery": "^2.7.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
