--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "tailwindcss": "^3.4.3"
   }
 }
